# Nix-Package-Search

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  RESOURCES.md  TODO.md  argument_test.sh  argument_test.sh.source  flake.nix  nps  release.toml  test.sh
.github/workflows/: ci.yml  coverage.yml  fast-forward.yml  main.yml  pull_request.yml  release.yml  test.yml
benchmarks/: README.md
hooks/: pre-push
src/: main.rs
tests/: integration.rs  nps.cache  nps.experimental.dev.cache
