[package]
name = "nps"
version = "0.2.0"
description = "Find SEARCH_TERM in available nix packages and sort results by relevance"
authors = ["Ole Mussmann <github+account@ole.mn>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive", "env", "string"] }
directories = "5.0.1"
env_logger = "0.11.6"
grep = "0.3.2"
home = "0.5.11"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tempfile = "3.14.0"
termcolor = "1.4.1"
