[package]
name = "nps"
version = "0.2.5"
description = "Find SEARCH_TERM in available nix packages and sort results by relevance"
authors = ["Ole Mussmann <github+account@ole.mn>"]
homepage = "https://github.com/OleMussmann/Nix-Package-Search"
repository = "https://github.com/OleMussmann/Nix-Package-Search"
documentation = "https://github.com/OleMussmann/Nix-Package-Search/blob/main/README.md"
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive", "env", "string"] }
env_logger = "0.11.6"
grep = "0.3.2"
home = "0.5.11"
log = "0.4.22"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tempfile = "3.15.0"
termcolor = "1.4.1"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
temp-env = "0.3.6"
